# basyx-cpp-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: Findasio.cmake  (+3 more)
lib/asio/: CMakeLists.txt
lib/cppbase64/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
src/aas/: BaSyxAASConfig.cmake.in  CMakeLists.txt
src/aas/aas/enumerations/: AssetKind.cpp  DataTypeIEC61360.cpp  EntityType.cpp  IdentifiableElements.cpp  IdentifierType.cpp  KeyElements.cpp  KeyType.cpp  LevelType.cpp  LocalKeyType.cpp  ModelTypes.cpp  ModelingKind.cpp  ReferableElements.cpp  XsdTypes.cpp
src/aas/aas/map_v2/: Submodel.cpp  constexpr.cpp
src/aas/aas/simple/: Submodel.cpp
src/abstraction/: BaSyxAbstractionConfig.cmake.in  CMakeLists.txt
src/abstraction/abstraction/net/: Acceptor.cpp
src/cli/: CMakeLists.txt  main.cpp
src/controlcomponent/: CMakeLists.txt
src/controlcomponent/enumerations/: ControlComponentConstants.cpp  ExecutionOrder.cpp  ExecutionState.cpp
src/controlcomponent/map/: ControlComponent.cpp
src/controlcomponent/simple/: ControlComponent.cpp
src/http/: CMakeLists.txt
src/http/basyxpp-http/: httpHandler.cpp  httpHandler.h  main.cpp
src/http/basyxpp-http-tests/: CMakeLists.txt  tests_misc.cpp
src/libaas/: BaSyxAASConfig.cmake.in  CMakeLists.txt  sources.cmake
src/libaas/basyx/: CMakeLists.txt  administrativeInformation.cpp  administrativeInformation.h  administrative_information.cpp  administrative_information.h  assetadministrationshell.h  environment.h  haskind.cpp  haskind.h  hassemantics.h  identifiable.h  identifier.cpp  identifier.h  identifierkeyvaluepair.h  key.cpp  key.h  labelType.cpp  labelType.h  langstringset.cpp  langstringset.h  modeltype.h  qualifiable.cpp  qualifiable.h  referable.cpp  referable.h  reference.cpp  reference.h  specificAssetId.h  submodel.h  versionRevisionType.cpp  versionRevisionType.h
src/libaas/basyx/asset/: CMakeLists.txt  asset.h  assetinformation.h
src/libaas/basyx/base/: CMakeLists.txt  basyx_enum_base.h  basyx_enums.cpp  copyable.h  copyable_base.h  elementcontainer.h  elementvector.h  minMaxString.cpp  minMaxString.h  token.h  valuetypedefs.cpp  valuetypedefs.h
src/libaas/basyx/constraints/: CMakeLists.txt  constraint.cpp  constraint.h  formula.cpp  formula.h  qualifier.cpp  qualifier.h
src/libaas/basyx/dataspecification/: CMakeLists.txt  DataSpecification.cpp  DataSpecification.h  DataSpecificationContent.h  DataSpecificationIEC61360.h  DataSpecificationPhysicalUnit.cpp  DataSpecificationPhysicalUnit.h  ValueList.cpp  ValueList.h  ValueReferencePair.h
src/libaas/basyx/enums/: AssetKind.cpp  AssetKind.h  CMakeLists.txt  Conversions.h  DataTypeDefinition.cpp  DataTypeDefinition.h  DataTypeIEC61360.cpp  DataTypeIEC61360.h  EntityType.h  IdentifiableElements.cpp  IdentifiableElements.h  IdentifierType.h  KeyElements.cpp  KeyElements.h  KeyType.cpp  KeyType.h  LevelType.cpp  LevelType.h  LocalKeyType.h  ModelTypes.cpp  ModelTypes.h  ModelingKind.cpp  ModelingKind.h  QualifierKind.cpp  QualifierKind.h  ReferableElements.cpp  ReferableElements.h  SubmodelElements.cpp  SubmodelElements.h  XsdTypes.h
src/libaas/basyx/qualifiable/: qualifiable.cpp  qualifiable.h  qualifiable_fwd.h  qualifier.cpp  qualifier.h  qualifierbase.h
src/libaas/basyx/semantics/: CMakeLists.txt  conceptdescription.h  hasDataSpecification.cpp  hasDataSpecification.h  hasdataspecification.h
src/libaas/basyx/serialization/: CMakeLists.txt  serializable.h  serializable_base.h  serializer.h
src/libaas/basyx/submodelelement/: CMakeLists.txt  annotatedrelationshipelement.cpp  annotatedrelationshipelement.h  basicevent.h  blob.cpp  blob.h  capability.h  dataelement.cpp  dataelement.h  entity.h  event.h  file.cpp  file.h  multilanguageproperty.cpp  multilanguageproperty.h  operation.cpp  operation.h  operationvariable.h  property.h  range.h  referenceelement.h  relationshipelement.cpp  relationshipelement.h  submodelelement.cpp  submodelelement.h  submodelelementcollection.cpp  (+1 more)
src/logging/: BaSyxLogConfig.cmake.in  CMakeLists.txt
src/logging/log/: log.cpp
src/opcua/: BaSyxOPCUAConfig.cmake.in  CMakeLists.txt
src/opcua/client/: Client.cpp  ClientServices.cpp  Subscription.cpp
src/opcua/common/: ExpandedNodeId.cpp  LocalizedText.cpp  MethodAttributes.cpp  NodeId.cpp  ObjectAttributes.cpp  ObjectTypeAttributes.cpp  QualifiedName.cpp  ReferenceTypeAttributes.cpp  Services.cpp  Utilities.cpp  VariableAttributes.cpp  Variant.cpp
src/opcua/provider/: OPCUAModelProvider.cpp
src/opcua/server/: Server.cpp  ServerServices.cpp
src/opcua/typesmap/: TypesMap.cpp  TypesTransformer.cpp
src/server/: BaSyxServerConfig.cmake.in  CMakeLists.txt
src/server/server/: TCPSelectServer.cpp
src/shared/: BaSyxSharedConfig.cmake.in  CMakeLists.txt
src/util/: BaSyxUtilConfig.cmake.in  CMakeLists.txt
src/util/util/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/vab/: BaSyxVABConfig.cmake.in  CMakeLists.txt
src/vab/vab/: ElementList.cpp  ElementMap.cpp
tests/: CMakeLists.txt  test_basyx.cpp  test_json.cpp  test_misc.cpp  test_optional.cpp
tests/integration/: CMakeLists.txt
tests/integration/cpp_test_connector/: CMakeLists.txt  cpp_test_connector.cpp
tests/integration/cpp_test_server/: CMakeLists.txt  cpp_test_server.cpp
tests/regression/aas/: CMakeLists.txt
tests/regression/controlcomponent/: CMakeLists.txt  test_ControlComponent.cpp
tests/regression/opcua/: CMakeLists.txt  OPCUATestSetup.h
tests/regression/submodel/: CMakeLists.txt
tests/regression/util/: CMakeLists.txt
tests/regression/vab/: CMakeLists.txt
tests/support/: CMakeLists.txt  macros.h  main.cpp
tests/tests_libaas/: CMakeLists.txt  test_algorithm.cpp  test_basyx.cpp  test_constrained_string.cpp  test_copyable.cpp  test_elementcontainer.cpp  test_json.cpp  test_json_deserializer.cpp  test_misc.cpp  test_operations.cpp  test_optional.cpp  test_property.cpp  test_qualifier.cpp  test_string_view.cpp
tests/tests_misc/: CMakeLists.txt  test_misc.cpp  test_serializer.cpp  test_serializer_2.cpp
tests/tests_xml/: CMakeLists.txt  test_mlp.cpp  test_xml.cpp
(+588 files in other folders)
